--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,26 @@
+* {
+  box-sizing: border-box;
+}
 
+body {
+  font-weight: 400;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  line-height: 120%;
+  color: #131313;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+.container {
+  max-width: 1180px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
