--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ ul {
 
 .menu__list {
   display: flex;
+  padding-right: 70px;
 }
 
 .menu__link {
@@ -86,6 +87,15 @@ ul {
 
 .gallery-slider {
   padding-left: 50px;
+}
+
+.gallery-slider__item {
+  height: 632px;
+}
+
+.gallery-slider__item img {
+  height: 100%;
+  background-size: cover;
 }
 
 .slick-dots {
